--- a/build.gradle
+++ b/build.gradle
@@ -85,11 +85,18 @@ minecraft {
     }
 }
 
+repositories {
+    maven { url 'https://maven.blamejared.com' }
+}
+
 dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.16.1-32.0.61'
+
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-39:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-39")
 
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
