--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -64,9 +64,9 @@ It adds corgis with varying abilities.
     versionRange="[1.19.2,1.20)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.corgimod]]
-    modId="cloth_config"
-    mandatory=true
-    versionRange="[8.2.88,)"
-    ordering="NONE"
-    side="BOTH"
+#[[dependencies.corgimod]]
+ #   modId="cloth_config"
+ #   mandatory=true
+  #  versionRange="[8.2.88,)"
+   # ordering="NONE"
+  #  side="BOTH"
