Custom Beg Goal
Makes corgis tilt their head when you're hold an item that you can use on them.

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,1 @@
-public net.minecraft.world.entity.npc.Villager f_35378_
+public net.minecraft.world.entity.ai.goal.BegGoal m_25066_(Lnet/minecraft/world/entity/player/Player;)Z #playerHolderInteresting
